third_party/WebKit/Source/WebCore/Modules/indexeddb/IDBCallbacks.h
@@ -30,6 +30,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef IDBCallbacks_h
 #define IDBCallbacks_h
 
+#include "DOMStringList.h"
 #include "IDBDatabaseBackendInterface.h"
 #include "IDBDatabaseError.h"
 #include "IDBKey.h"
